alignment issue in blogs

--- a/src/Components/FutureBlogcomp/CommonBlog.css
+++ b/src/Components/FutureBlogcomp/CommonBlog.css
@@ -276,7 +276,7 @@
   }
   
   .futureblog-imgcenter img {
-    height: 300px;
+    height: auto;
     width: 500px;
     max-width: 100%;
     object-fit: cover;
@@ -294,26 +294,25 @@
   
   .Blog-coverimg img {
     width: 100%;
-    height: 350px;
+    height: auto;
     object-fit: cover; 
   }
   
   @media (max-width: 768px) { 
     .Blog-coverimg img {
-      height: 200px;
+      height: auto;
     }
   }
   
   @media (max-width: 480px) {
     .Blog-coverimg img {
-      height: 150px; 
+      height: auto; 
     }
   }
   
   
 
 
-  /* Mobile Responsive */
   @media (max-width: 768px) {
     .futureblog-imgcenter img {
         height: auto; 
